--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,20 @@ td {
 button {
   margin: auto;
   display: block;
+  background-color: #333;
+  color: white;
+  border-color: #333;
+  border-radius: 5px;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: white;
+  color: #333;
+  transition-duration: .4s;
 }
 
 .keepers-2017 {
