--- a/css/2018.css
+++ b/css/2018.css
@@ -18,7 +18,7 @@ tr:nth-child(odd) {
 
 /* Start Keepers */
 
-h4 {
+h2 {
   text-decoration: underline;
 }
 
@@ -66,7 +66,12 @@ h4 {
 /* Start Keepers */
 
 h4 {
+  font-size: .8em;
   text-align: left;
+}
+
+.keepers1 p {
+  font-size: .8em;
 }
 
 .keepers1,
