--- a/css/draft.css
+++ b/css/draft.css
@@ -99,6 +99,7 @@ sup {
   padding: 15px;
 }
 
+/* Comment out after draft */
 .draft-board-2018 td:nth-child(n+2) {
   background-color: #c2d6d6;
 }
@@ -142,6 +143,7 @@ sup {
 .k {
   background-color: #ffbf80;
 }
+
 
 /* End Draft Board 2018  */
 
